[project]
version = "1.3"
name = "bayrol-poolaccess-mqtt"
requires-python = ">= 3.11"
authors = [
    { name="tdenolle", email="thomas@denolle.fr" }
]
description = "Easily connect Bayrol Poolaccess to Mqtt"
keywords = ['bayrol', 'poolaccess', 'mqtt']
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "paho-mqtt>=2.1.0",
    "docopt>=0.6.0,<1.0.0"
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.11',
]

[project.urls]
Repository = "https://github.com/tdenolle/bayrol-poolaccess-mqtt"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
    ]
